# SBJni

./: .gitignore  build.gradle  readme.md  settings.gradle
src/main/java/www/mys/com/sbjni/: InitJob.java  SbjniApplication.java
src/main/java/www/mys/com/sbjni/controller/: NativeController.java
src/main/java/www/mys/com/sbjni/utils/: LogUtils.java  NativeUtils.java
src/main/java/www/mys/com/sbjni/utils/file/: AppendFileUtils.java  CMDUtils.java  CloseUtils.java  FileUtils.java  StreamUtils.java
src/main/native/: CMakeLists.txt
src/main/native/inc/: NativeUtils.h
src/main/native/src/: NativeUtils.cpp
